--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "test": "vitest run"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.2.1",
@@ -18,12 +17,7 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.1",
-    "jsdom": "^26.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "vitest": "^3.0.5"
+    "vite": "^6.2.0"
   }
 }
